--- a/templates/login2.html
+++ b/templates/login2.html
@@ -49,7 +49,7 @@
                 <input type="password" name="password" >
             </div>
             <button type="submit">Iniciar Sesion</button>
-            <a href="{{url_for('usuarioNuevo')}}">Crear usuario</a>
+            <a href="usuario_nuevo">Crear usuario</a>
         </form>
     </section>
 </body>
