--- a/templates/solicitante2.html
+++ b/templates/solicitante2.html
@@ -64,7 +64,7 @@
             <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">La información ha sido enviada exitosamente</p>
             <p class="formulario__mensaje-error" id="formulario__mensaje-error"  >Por favor completa todos los campos</p>
                 <button type="submit" > Guardar</button>
-                <a  href="solicitante2">Solicitante</a>
+                <a  href="solicitud_nuevo"> Solicitud </a>
                 <a  href="empresa_nuevo"> Empresa </a>
             </form>
     </section>
