--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -7,20 +7,14 @@
 
 }
 
-body  {
+.container body  {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgb(240, 238,238);
 }
-.container{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(240, 238,238);
-}
+
 .header{
     background-color: rgb(30,87,218);
     display: flex;
