--- a/templates/estado2.html
+++ b/templates/estado2.html
@@ -36,7 +36,7 @@
             <div>
                 <div class="input-box">
                     <label for="">Descripcion</label>
-                    <input type="text" name="descripcion">
+                    <input type="text" name="descripcion" required>
                 </div>
             </div>
            <a href="{{url_for('todo')}}" ><button class="btn" type="submit" >Guardar</button></a> 
