--- a/templates/empresa2.html
+++ b/templates/empresa2.html
@@ -32,27 +32,27 @@
         <div>
             <div class="input-box">
                 <label for="">Nombre</label>
-                <input type="text" name="nombre">
+                <input type="text" name="nombre" required>
             </div>
         </div>
-        <div class="formulario__grupo" id="grupo__rif" >
+        <div class="formulario__grupo" id="grupo__rif"  >
             <div class="input-box">
                 <label for="">RIF</label>
-                <input type="number" id="rif" name="rif">
+                <input type="number" id="rif" name="rif" required>
                 <p class="formulario__input-error">El Rif no puede contener letras</p>
             </div>
         </div>
         <div class="formulario__grupo" id="grupo__telefono" >
             <div class="input-box">
                 <label for="">Telefono</label>
-                <input type="number" id="telefon" name="telefono" >
+                <input type="number" id="telefono" name="telefono" required>
                 <p class="formulario__input-error">El telefono no puede contener letras </p>
             </div>
         </div>
         <div>
             <div class="input-box">
                 <label for="">Direccion</label>
-                <input type="text" name="direccion">
+                <input type="text" name="direccion" required>
             </div>
         </div>
 
