--- a/templates/solicitud2.html
+++ b/templates/solicitud2.html
@@ -28,13 +28,13 @@
             <div>
                 <div class="input-box">
                     <label for="">Empresa/Persona</label>
-                    <input type="text" name="empresa">
+                    <input type="text" name="empresa" required>
                 </div>
             </div>
             <div>
                 <div class="input-box" >
                     <label for="">Descripcion</label>
-                    <input type="text" name="descripcion">
+                    <input type="text" name="descripcion" required>
                 </div>
             </div>
             <div class="formulario__grupo"  id="grupo__numero" >
@@ -47,7 +47,7 @@
             <div class="formulario__grupo" id="grupo__firmante" >
                 <div class="input-box">
                     <label for="">Firmante</label>
-                    <input type="text" name="firmante" id="firmante">
+                    <input type="text" name="firmante" id="firmante" required>
                     <p class="formulario__input-error">El firmante no debe tener numeros ni simbolos en su nombre</p>
                 </div>
             </div>
