Nueva prueba de ruta

--- a/templates/solicitud2.html
+++ b/templates/solicitud2.html
@@ -74,8 +74,8 @@
             <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">La información ha sido enviada exitosamente</p>
             <button type="submit" > Guardar </button>
             <div>
-                <a  href="solicitante2">Solicitante</a>
-                <a  href="empresa_nuevo" role="button"> Empresa </a>
+                <a  href="{{url_for('solicitante2')}}">Solicitante</a>
+                <a  href="{{url_for('empresa2')}}" role="button"> Empresa </a>
             </div>
         </form>
     </section>
