Prueba de nuevas rutas

--- a/templates/empresa2.html
+++ b/templates/empresa2.html
@@ -57,8 +57,8 @@
         </div>
 
         <button type="submit" class="btn">Guardar</button>
-        <a  href="solicitante2">Solicitante</a>
-        <a  href="solicitud_nuevo"> Solicitud </a>
+        <a  href="{{url_for('solicitante2')}}">Solicitante</a>
+        <a  href="{{url_for('solicitud_nuevo')}}"> Solicitud </a>
     </form>
 
 </section>
