Reparacion de ruta

--- a/templates/empresa2.html
+++ b/templates/empresa2.html
@@ -57,7 +57,7 @@
         </div>
 
         <button type="submit" class="btn">Guardar</button>
-        <a  href="{{url_for('solicitante2')}}">Solicitante</a>
+        <a  href="{{url_for('solcitante2')}}">Solicitante</a>
         <a  href="{{url_for('solicitud_nuevo')}}"> Solicitud </a>
     </form>
 
