--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -30,7 +30,7 @@
                     <li><a href="{{url_for('solicitud_nuevo')}}">Solicitud</a></li>
                     <li><a href="{{url_for('logout')}}">Cerrar Sesion</a></li>
                     <li><a href="{{url_for('todo')}}">Tareas</a></li>
-                    <li><a href="{{url_for('asignar2')}}">Usuario</li>
+                    <li><a href="{{url_for('asignar2')}}">Asignación</li>
                 </ul>
             </nav>
             <a href="{{url_for('mostrar')}}" class="btn" ><button class="btn-button" >Seguimiento</button></a>
