--- a/templates/ver.html
+++ b/templates/ver.html
@@ -27,7 +27,7 @@
             <li><a href="{{url_for('solicitud_nuevo')}}">Solicitud</a></li>
             <li><a href="{{url_for('logout')}}">Cerrar Sesion</a></li>
             <li><a href="{{url_for('todo')}}">Tareas</a></li>
-            <li><a href="{{url_for('asignar2')}}">Usuario</a></li>
+            <li><a href="{{url_for('asignar2')}}">Asignación</a></li>
         </ul>
     </nav>
     <a href="{{url_for('mostrar')}}" class="btn" ><button class="btn-button" >Seguimiento</button></a>
