--- a/templates/usuario2.html
+++ b/templates/usuario2.html
@@ -63,6 +63,15 @@
                     <p class="formulario__input-error">La contraseña debe tener entre 4 y 12 caracteres</p>
                 </div>
             </div> 
+            <div>
+                <label for="">Rango</label>
+                <div class="select-box">
+                    <select name="rango" id="">
+                    <option value="ADMINISTRADOR">Administrador</option>
+                    <option value="PRINCIPAL">Principal</option>
+                    <option value="COMUN">Común</option>
+                    </select>
+                </div>
             <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">La información ha sido enviada exitosamente</p>
             <p class="formulario__mensaje-error" id="formulario__mensaje-error"  >Por favor completa todos los campos</p>
             <button type="submit"  > Guardar</button>
