--- a/templates/usuario2.html
+++ b/templates/usuario2.html
@@ -75,7 +75,7 @@
             <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">La información ha sido enviada exitosamente</p>
             <p class="formulario__mensaje-error" id="formulario__mensaje-error"  >Por favor completa todos los campos</p>
             <button type="submit"  > Guardar</button>
-            <a href="{{url_for('login')}}">Regresar al Login</a>
+            <a href="{{url_for('inicio')}}">Regresar al Inicio</a>
         </form>
     </section>
 </body>
